fixes the rightmargin on iphone

--- a/css/main.css
+++ b/css/main.css
@@ -528,11 +528,21 @@ nav a:hover {
     }
 }
 
-.twitter-pixel-logo{
+.twitter-pixel-logo {
     position: absolute;
     top: 15px;
     right: -25px;
     z-index:1;
+}
+
+@media screen and (max-width: 570px) {
+    .twitter-pixel-logo {
+        right: -15px;
+    }
+    .twitter-pixel-logo img {
+        width: 45px;
+        height: auto;
+    }
 }
 
 .dibigong-item {
